@@ -1,5 +1,7 @@
 Feb 26 2004  devel  Smart determination of channel controls on new orinoco
                      drivers, correct exiting of rfmon on new orinoco drivers
+                    Added new orinoco capture source orinoco_14 to handle the
+                     changes in the new orinoco 0.14 cvs tree
 Feb 25 2004  devel  Fixed expat parsing the new kismet version strings
 Feb 24 2004  devel  Fixed prism2_legacy (wow, someone still uses this) to trim
                      the FCS off the frames correctly, and to mute the wlanctl
